# voicecheck

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  index.html  package.json  pyproject.toml
.github/workflows/: ci.yml
assets/: index-BjxCMgkL.css  index-CO23YjY8.js
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  characters.py  projects.py  webhooks.py
backend/app/models/: __init__.py  character.py  project.py  user.py  voice_profile.py
backend/app/services/: __init__.py  character.py  project.py  stripe.py  supabase.py  voice_profile.py
frontend/: index.html  playwright.config.ts  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.tsx
tests/: __init__.py  conftest.py  test_task2_auth_projects.py  test_task3_characters.py  test_task4_voice_profiles.py
tests/e2e/: analysis-failure-recovery.spec.ts  auth-isolation.spec.ts  corrupt-file-upload.spec.ts  free-tier-paywall.spec.ts  full-manuscript-analysis.spec.ts
